[package]
name = "fks-shared-rust"
version = "0.1.0"
edition = "2021"
description = "FKS shared Rust utilities: env loading, risk utils, shared types"
license = "Proprietary"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
once_cell = "1"

[dev-dependencies]
anyhow = "1"
