[package]
name = "shared_rust"
version = "0.1.0"
edition = "2021"
description = "FKS shared Rust utilities: env loading, risk utils, shared types"
license = "Proprietary"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
once_cell = "1"

[dev-dependencies]
anyhow = "1"

# FKS Template Dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
log = "0.4"

# Optional dependencies for specific services
tokio = { version = "1.0", features = ["full"], optional = true }
axum = { version = "0.7", optional = true }
sqlx = { version = "0.7", optional = true }
redis = { version = "0.24", optional = true }

[features]
default = []
web = ["tokio", "axum"]
database = ["sqlx"]
cache = ["redis"]
